--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         vertical-align: middle;
       }
       .slideshow-container {
-        max-width: 1000px;
+        max-width: 100%;
         position: relative;
         margin: auto;
       }
