--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
         vertical-align: middle;
       }
       .slideshow-container {
-        max-width: 100%;
-        position: relative;
+        position: fixed;
+        width: 100%;
+        height: auto;
+        left: 0;
+        top: 0;
         margin: auto;
       }
       /* Next & previous buttons */
