--- a/index.html
+++ b/index.html
@@ -61,39 +61,39 @@
   <body>
     <div class="slideshow-container">
       <div class="mySlides fade">
-        <img src="images/1.png" style="width:100%">
+        <img src="images/01.png" style="width:100%">
         <div class="text"></div>
       </div>
       <div class="mySlides fade">
-        <img src="images/2.png" style="width:100%">
+        <img src="images/02.png" style="width:100%">
         <div class="text"></div>
       </div>
       <div class="mySlides fade">
-        <img src="images/3.png" style="width:100%">
+        <img src="images/03.png" style="width:100%">
         <div class="text"></div>
       </div>
       <div class="mySlides fade">
-        <img src="images/4.png" style="width:100%">
+        <img src="images/04.png" style="width:100%">
         <div class="text"></div>
       </div>
       <div class="mySlides fade">
-        <img src="images/5.png" style="width:100%">
+        <img src="images/05.png" style="width:100%">
         <div class="text"></div>
       </div>
       <div class="mySlides fade">
-        <img src="images/6.png" style="width:100%">
+        <img src="images/06.png" style="width:100%">
         <div class="text"></div>
       </div>
       <div class="mySlides fade">
-        <img src="images/7.png" style="width:100%">
+        <img src="images/07.png" style="width:100%">
         <div class="text"></div>
       </div>
       <div class="mySlides fade">
-        <img src="images/8.png" style="width:100%">
+        <img src="images/08.png" style="width:100%">
         <div class="text"></div>
       </div>
       <div class="mySlides fade">
-        <img src="images/9.png" style="width:100%">
+        <img src="images/09.png" style="width:100%">
         <div class="text"></div>
       </div>
       <div class="mySlides fade">
@@ -118,6 +118,30 @@
       </div>
       <div class="mySlides fade">
         <img src="images/15.png" style="width:100%">
+        <div class="text"></div>
+      </div>
+            <div class="mySlides fade">
+        <img src="images/16.png" style="width:100%">
+        <div class="text"></div>
+      </div>
+            <div class="mySlides fade">
+        <img src="images/17.png" style="width:100%">
+        <div class="text"></div>
+      </div>
+            <div class="mySlides fade">
+        <img src="images/18.png" style="width:100%">
+        <div class="text"></div>
+      </div>
+            <div class="mySlides fade">
+        <img src="images/19.png" style="width:100%">
+        <div class="text"></div>
+      </div>
+            <div class="mySlides fade">
+        <img src="images/20.png" style="width:100%">
+        <div class="text"></div>
+      </div>
+            <div class="mySlides fade">
+        <img src="images/21.png" style="width:100%">
         <div class="text"></div>
       </div>
       
